css to stop portfolio images stretching

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -195,7 +195,7 @@ header {
 #projects {
     background-color: #fefefe;
     background-image: url("https://images.unsplash.com/photo-1532210317995-cc56d90177d9?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1950&q=80");
-        background-repeat: no-repeat;
+    background-repeat: no-repeat;
     background-size: cover;
     background-position: top;
     background-attachment: fixed;
@@ -237,6 +237,7 @@ h4 {
     height: 32vh;
     width: 100%;
     opacity: 0.95;
+    object-fit: cover;
 }
 .project-card:hover {
     box-shadow: 2.5px 2.5px 3px grey;
